[gd_scene load_steps=36 format=2]

[ext_resource path="res://tiles/BaseHex.gd" type="Script" id=1]
[ext_resource path="res://tiles/textures/base_hex_50x50_rounded.png" type="Texture" id=2]
[ext_resource path="res://tiles/textures/base_hex_50x50_filled.png" type="Texture" id=3]
[ext_resource path="res://tiles/textures/energy_hex_bg_50x50.png" type="Texture" id=4]
[ext_resource path="res://tiles/animations/hex_energy/frame_01.png" type="Texture" id=5]
[ext_resource path="res://tiles/animations/hex_energy/frame_02.png" type="Texture" id=6]
[ext_resource path="res://tiles/animations/hex_energy/frame_03.png" type="Texture" id=7]
[ext_resource path="res://tiles/animations/hex_energy/frame_04.png" type="Texture" id=8]
[ext_resource path="res://tiles/animations/hex_energy/frame_05.png" type="Texture" id=9]
[ext_resource path="res://tiles/animations/hex_energy/frame_06.png" type="Texture" id=10]
[ext_resource path="res://tiles/animations/hex_energy/frame_07.png" type="Texture" id=11]
[ext_resource path="res://tiles/animations/hex_energy/frame_08.png" type="Texture" id=12]
[ext_resource path="res://tiles/animations/hex_energy/frame_09.png" type="Texture" id=13]
[ext_resource path="res://tiles/animations/hex_energy/frame_10.png" type="Texture" id=14]
[ext_resource path="res://tiles/animations/hex_energy/frame_11.png" type="Texture" id=15]
[ext_resource path="res://tiles/animations/hex_energy/frame_12.png" type="Texture" id=16]
[ext_resource path="res://tiles/animations/hex_energy/frame_13.png" type="Texture" id=17]
[ext_resource path="res://tiles/animations/hex_energy/frame_14.png" type="Texture" id=18]
[ext_resource path="res://tiles/animations/hex_energy/frame_15.png" type="Texture" id=19]
[ext_resource path="res://tiles/animations/hex_energy/frame_16.png" type="Texture" id=20]
[ext_resource path="res://tiles/animations/hex_energy/frame_17.png" type="Texture" id=21]
[ext_resource path="res://tiles/animations/hex_energy/frame_18.png" type="Texture" id=22]
[ext_resource path="res://tiles/animations/hex_energy/frame_19.png" type="Texture" id=23]
[ext_resource path="res://tiles/animations/hex_energy/frame_20.png" type="Texture" id=24]
[ext_resource path="res://tiles/animations/hex_energy/frame_21.png" type="Texture" id=25]
[ext_resource path="res://tiles/animations/hex_energy/frame_22.png" type="Texture" id=26]
[ext_resource path="res://tiles/animations/hex_energy/frame_23.png" type="Texture" id=27]
[ext_resource path="res://tiles/animations/hex_energy/frame_24.png" type="Texture" id=28]
[ext_resource path="res://tiles/animations/hex_energy/frame_25.png" type="Texture" id=29]
[ext_resource path="res://tiles/animations/hex_energy/frame_26.png" type="Texture" id=30]
[ext_resource path="res://tiles/animations/hex_energy/frame_27.png" type="Texture" id=31]
[ext_resource path="res://tiles/animations/hex_energy/frame_28.png" type="Texture" id=32]
[ext_resource path="res://tiles/animations/hex_energy/frame_29.png" type="Texture" id=33]
[ext_resource path="res://tiles/animations/hex_energy/frame_30.png" type="Texture" id=34]

[sub_resource type="SpriteFrames" id=1]

animations = [ {
"frames": [ ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 19 ), ExtResource( 20 ), ExtResource( 21 ), ExtResource( 22 ), ExtResource( 23 ), ExtResource( 24 ), ExtResource( 25 ), ExtResource( 26 ), ExtResource( 27 ), ExtResource( 28 ), ExtResource( 29 ), ExtResource( 30 ), ExtResource( 31 ), ExtResource( 32 ), ExtResource( 33 ), ExtResource( 34 ) ],
"loop": true,
"name": "EnergyFlow",
"speed": 6.0
} ]

[node name="BaseHex" type="Node2D" index="0"]

script = ExtResource( 1 )

[node name="InitialHex" type="StaticBody2D" parent="." index="0"]

editor/display_folded = true
input_pickable = false
collision_layer = 1
collision_mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0
_sections_unfolded = [ "Z Index" ]

[node name="HexCollisionPoly" type="CollisionPolygon2D" parent="InitialHex" index="0"]

build_mode = 0
polygon = PoolVector2Array( -12.5, 21.6506, 12.5, 21.6506, 25, 0, 12.5, -21.6506, -12.5, -21.6506, -25, 0 )

[node name="Sprite" type="Sprite" parent="InitialHex" index="1"]

texture = ExtResource( 2 )

[node name="ObstacleHex" type="StaticBody2D" parent="." index="1"]

editor/display_folded = true
z_index = 100
input_pickable = false
collision_layer = 1
collision_mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0

[node name="HexObstaclePoly" type="CollisionPolygon2D" parent="ObstacleHex" index="0"]

build_mode = 0
polygon = PoolVector2Array( -24.839, -0.19244, -12.2782, -21.5458, 12.2154, -21.4412, 24.9855, -0.297115, 12.006, 21.1609, -11.8595, 21.1609 )

[node name="Sprite" type="Sprite" parent="ObstacleHex" index="1"]

texture = ExtResource( 3 )

[node name="EnergyFlowHex" type="StaticBody2D" parent="." index="2"]

editor/display_folded = true
z_index = 100
input_pickable = false
collision_layer = 1
collision_mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0

[node name="HexEnergyFlowPoly" type="CollisionPolygon2D" parent="EnergyFlowHex" index="0"]

build_mode = 0
polygon = PoolVector2Array( -24.839, -0.19244, -12.2782, -21.5458, 12.2154, -21.4412, 24.9855, -0.297115, 12.006, 21.1609, -11.8595, 21.1609 )

[node name="Sprite" type="Sprite" parent="EnergyFlowHex" index="1"]

texture = ExtResource( 4 )

[node name="EnergyFlowSprites" type="AnimatedSprite" parent="EnergyFlowHex" index="2"]

frames = SubResource( 1 )
animation = "EnergyFlow"
frame = 16
_sections_unfolded = [ "Material", "Transform" ]


